--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.17
   flutter_toggle_tab: ^1.4.1
+  intl: any
+  bloc: ^9.1.0
+  equatable: ^2.0.7
+  flutter_bloc: ^9.1.1
+  cloud_firestore: ^6.1.0
 
 pubspec:
   yaml:
