Edited => Every way that I can

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
-
   assets:
     - assets/png/
+    - assets/png/clubs/
     - assets/svg/
     - assets/images/
 
